#360039 - moved arrows to prevent overlap with caption text

--- a/css/lightbox.css
+++ b/css/lightbox.css
@@ -61,8 +61,9 @@
   margin-left: auto;
   margin-right: auto;
   width: 20%;
-  position: relative;
-  top: -60px;
+  position: absolute;
+  bottom: 0px;
+  height: 45px;
 }
 
 #imageData>#frameHoverNav {
@@ -112,9 +113,8 @@
   width: 45px;
   height: 45px;
   display: block;
-  margin-bottom: -60px;
-  position: relative;
-  top: 60px;
+  position: absolute;
+  bottom: 0px;
 }
 
 #imageDataContainer {
@@ -152,6 +152,10 @@
 
 #imageData #bottomNav {
   height: 66px;
+}
+.lightbox2-alt-layout #imageData #bottomNav,
+.lightbox2-alt-layout-data #bottomNav {
+  margin-bottom: 60px;
 }
 
 #lightbox2-overlay {
@@ -252,6 +256,23 @@
   height: 20px;
   width: 20px;
   background: url(../images/pause.png) no-repeat;
+}
+
+.lightbox2-alt-layout-data #bottomNavClose,
+.lightbox2-alt-layout #bottomNavClose {
+  margin-top: 93px;
+}
+.lightbox2-alt-layout-data #bottomNavZoom,
+.lightbox2-alt-layout-data #bottomNavZoomOut,
+.lightbox2-alt-layout #bottomNavZoom,
+.lightbox2-alt-layout #bottomNavZoomOut {
+  margin-top: 93px;
+}
+.lightbox2-alt-layout-data #lightshowPlay,
+.lightbox2-alt-layout-data #lightshowPause,
+.lightbox2-alt-layout #lightshowPlay,
+.lightbox2-alt-layout #lightshowPause {
+  margin-top: 102px;
 }
 
 .lightbox_hide_image {
